fix(webSocketRoute): resolve URL against baseURL (#1722)